--- a/Mingeso/demo/src/main/resources/application.yml
+++ b/Mingeso/demo/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       ddl-auto: update
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    dbname: root
+    dbname: milkstgo
     url: jdbc:mysql://localhost:3306/
     username: root
     password: 123456
