--- a/Mingeso/demo/docker-compose.yml
+++ b/Mingeso/demo/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - ./data/db:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: milkstgo
+      MYSQL_DATABASE: root
     ports:
       - 33060:3306
   app1:
