--- a/Mingeso/demo/src/main/resources/application.yml
+++ b/Mingeso/demo/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     show-sql: true
     hibernate:
       dialect: MySQL8Dialect
-      ddl-auto: create-drop
+      ddl-auto: update
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     dbname: milkstgo
